--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,13 +8,15 @@ header {
     top: 0;
     left: 0;
     z-index: 1;
-}
 
+}
+/*
 .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+*/
 
 header nav div a{
     display: flex;
