--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,34 +1,74 @@
 .main-numbers{
     padding-top: 4ren;
     padding-bottom: 122px;
-    p {
-        text-align: center;
-        width: 100%;
-        max-width: 700rem;
-        margin: 0 auto;
-        color: var(--BLACK-PRIMARY);
-        font-size: 1.6rem;
-        line-height: 155.3%;
-        margin-bottom: 10.2rem;
-    }
-
-    .box {
-        position: relative;
-        width: 100%;
-        height: 27.7rem;
-        max-width: 85.8rem;
-        margin: 0 auto;
-        border-radius: 20px;
-        border: 1.5px solid #ffe0b1;
-        .ilustra {
-            position: absolute;
-            top: -7.4rem;
-            left: -16px;
-            z-index: 1;
-
+        p {
+            text-align: center;
+            width: 100%;
+            max-width: 700rem;
+            margin: 0 auto;
+            color: var(--BLACK-PRIMARY);
+            font-size: 1.6rem;
+            line-height: 155.3%;
+            margin-bottom: 10.2rem;
+            font-family: "Roboto Mono";
+            font-size: 12px;
         }
-        .content {
 
+        .box {
+            position: relative;
+            width: 100%;
+            height: 27.7rem;
+            max-width: 85.8rem;
+            margin: 0 auto;
+            border-radius: 20px;
+            border: 1.5px solid #ffe0b1;
+            padding: 5px;
+
+            .ilustra {
+                position: absolute;
+                top: -7.4rem;
+                left: -16px;
+                z-index: 1;
+            }
+
+            .content {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                padding: 45px;
+                width: 100%;
+                height: 100%;
+                border-radius: 20px;
+                background-color: #f6cf8a;
+                ul {
+                    display: flex;
+                    li {
+                        text-align: center;
+                        padding: 1.5rem 2.1rem;
+                        &:first-child{
+                            padding-left: 0;
+                        }
+                        &:last-child{
+                            padding-right: 0;
+                        }
+                        &:not(:first-child){
+                            border-left: 1px solid rgba(255, 255, 255, 0.4);
+                        }
+                        strong  {
+                            display: block;
+                            color: var(--BLACK-PRIMARY);
+                            font-family: "Roboto Mono";
+                            font-size: 14px;
+                            line-height: 155.3%;
+                            margin-bottom: 13px;
+                        }
+                        h3 {
+                            color: white;
+                            font-size: 5rem;
+                            line-height: 0.7;
+                        }
+                    }
+                }
         }
     }
 }
